applications/proxy/plane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-proxy
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8231
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plane-proxy
subsets:
- addresses:
  - ip: 192.168.178.47
  ports:
  - name: app
    port: 8231
    protocol: TCP
