applications/proxy/plane/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: plane-ingress
spec:
  rules:
    - host: board.home.juli.sh
      http:
        paths:
          - backend:
              service:
                name: plane-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - board.home.juli.sh
      secretName: plane-tls
status:
  loadBalancer: {}
